--- a/api/package.json
+++ b/api/package.json
@@ -20,8 +20,9 @@
     "@pothos/core": "4.0.2",
     "@pothos/plugin-prisma": "4.0.5",
     "@prisma/client": "5.16.1",
-    "graphql": "16.9.0",
+    "graphql": "^16.9.0",
     "graphql-scalars": "1.23.0",
+    "graphql-upload": "^16.0.2",
     "graphql-yoga": "5.6.1"
   },
   "devDependencies": {
