--- a/api/env.example
+++ b/api/env.example
@@ -2,3 +2,5 @@ DATABASE_URL=postgresql://user:pass@localhost:5432/postgres
 MAX_PEOPLE_PER_SEARCH=10
 FILESERVER_URL=http://localhost:3001
 MAX_PICTURES_PER_USER=4
+APP_SECRET="SET"
+TOKEN_DURATION='1h'
