--- a/api/package.json
+++ b/api/package.json
@@ -19,13 +19,18 @@
   "dependencies": {
     "@pothos/core": "4.0.2",
     "@pothos/plugin-prisma": "4.0.5",
+    "@pothos/plugin-scope-auth": "^4.1.0",
     "@prisma/client": "5.16.1",
+    "bcryptjs": "2.4.3",
     "graphql": "^16.9.0",
     "graphql-scalars": "1.23.0",
     "graphql-upload": "^16.0.2",
-    "graphql-yoga": "5.6.1"
+    "graphql-yoga": "5.6.1",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.14.12",
     "prisma": "5.16.1",
     "ts-node": "10.9.2",
