--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "apollo-server-micro": "^3.13.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
