--- a/frontend/env.example
+++ b/frontend/env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PORT=4000
 APP_SECRET="somesecret"
 TOKEN_DURATION='1h'
+FILESERVER_URL=http://localhost:3001
